--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -37,6 +37,6 @@
 
 % Solvers
 \newcommand{\minisat}{\texttt{MiniSAT}}
-\newcommand{\breakid}{\texttt{breakID}}
+\newcommand{\breakid}{\texttt{BreakID}}
 \newcommand{\shatter}{\texttt{Shatter}}
 \newcommand{\cdclsym}{\texttt{MiniSym}}
