--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,27 @@
 
+% == Static symmetry breaking
+
+% BreakID
+
+@inproceedings{devriendt2016improved,
+	title={Improved static symmetry breaking for SAT},
+	author={Devriendt, Jo and Bogaerts, Bart and Bruynooghe, Maurice and Denecker, Marc},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={104--122},
+	year={2016},
+	organization={Springer}
+}
+ % CP Matrix
+@inproceedings{flener2002breaking,
+	title={Breaking row and column symmetries in matrix models},
+	author={Flener, Pierre and Frisch, Alan M and Hnich, Brahim and Kiziltan, Zeynep and Miguel, Ian and Pearson, Justin and Walsh, Toby},
+	booktitle={International Conference on Principles and Practice of Constraint Programming},
+	pages={462--477},
+	year={2002},
+	organization={Springer}
+}
+
+
 % == Dynamic Symmetry breaking approches
 
 % Symmchaff
@@ -306,6 +329,14 @@
 	year={1996}
 }
 
+@inproceedings{aloul2002solving,
+	title={Solving difficult SAT instances in the presence of symmetry},
+	author={Aloul, Fadi A and Ramani, Arathi and Markov, Igor L and Sakallah, Karem A},
+	booktitle={Proceedings of the 39th annual Design Automation Conference},
+	pages={731--736},
+	year={2002},
+	organization={ACM}
+}
 
 
 % Source Wikipedia
