--- a/main.tex
+++ b/main.tex
@@ -40,10 +40,16 @@
 \definecolor{hgreen}{RGB}{0,153,20}%{rgb}{0, 0.8, 0.2}
 
 
+\definecolor{blue_1}{RGB}{51,102,204}
+\definecolor{red_1}{RGB}{220,57,18}
+\definecolor{green_1}{RGB}{16,150,24}
+
 \newcommand{\cred}[1]{{\color{purple}#1}}
 \newcommand{\cgreen}[1]{{\color{hgreen}#1}}
 \newcommand{\cblue}[1]{{\color{blue!80}#1}}
 \newcommand{\cprop}[1]{{\color{orange}#1}}
+
+
 
 %%% Tikz ======================================================================
 \usepackage{tikz}
@@ -52,6 +58,7 @@
 \usetikzlibrary{arrows,shapes,positioning}
 \usetikzlibrary{calc,decorations.markings}
 \usetikzlibrary{decorations.text}
+\usetikzlibrary{patterns}
 
 %%% Listings ==================================================================
 \usepackage{listings}
