Add shatter compact lex leader encoding

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -28,7 +28,7 @@
 
 \newcommand{\Group}[0]{\ensuremath{\mathfrak{S}}}
 
-\newcommand{\support}{\ensuremath{Supp}}
+\newcommand{\support}{\ensuremath{supp}}
 % Automorphism tool 
 \newcommand{\bliss}{\texttt{bliss}}
 \newcommand{\saucy}{\texttt{saucy3}}
