--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -12,6 +12,8 @@ A \emph{clause} $\omega$ is a finite disjunction of literals represented
 equivalently by $\omega = \bigvee_{i=1}^k l_i$ or the set of its literals
 $\omega = \{l_i\}_{i \in \llbracket 1,k \rrbracket}$. A clause with a single
 literal is called \emph{unit clause}.
+A clause is a \emph{tautology} if it is always true, a clause that contains a positive 
+and negative value of a clause for example.
 A \emph{conjunctive normal form (CNF) formula} $\varphi$ is a finite
 conjunction of clauses.  A CNF can be either noted $\varphi = \bigwedge_{i=1}^k
 \omega_i$ or $\varphi = \{\omega_i\}_{i \in \llbracket 1,k \rrbracket}$. We
